# Proyecto-NLP

./: .gitignore  README.md  ejercicio_1.ipynb  ejercicio_2.ipynb  proyecto.ipynb  pyproject.toml  utils.py
.data/: X_test_1.parquet  X_test_2.parquet  X_test_3.parquet  X_test_4.parquet
modules/: agents.py  utils.py
