[project]
name = "proyecto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "afinn>=0.1",
    "datasets>=4.8.5",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "spacy>=3.8.14",
    "tqdm>=4.67.3",
]
