[project]
name = "proyecto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "afinn>=0.1",
    "datasets>=4.8.5",
    "gensim>=4.4.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.3.1",
    "langchain-ollama>=1.1.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "protobuf>=7.34.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.14",
    "tiktoken>=0.13.0",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.1",
]
